Bug 500065 - Link in weather widget for Blackpool, Blackpool, GB (BBC Weather) is incorrect.
Summary: Link in weather widget for Blackpool, Blackpool, GB (BBC Weather) is incorrect.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Weather widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-14 13:27 UTC by johnparmitage
Modified: 2025-02-18 01:20 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description johnparmitage 2025-02-14 13:27:04 UTC
SUMMARY
The link to the location when clicking the weather widget is incorrect.

STEPS TO REPRODUCE
1. When the weather station is set to Blackpool, Blackpool, GB (BBC Weather) clicking the Data From BBC Weather link takes you to https://www.bbc.co.uk/weather/3333127


OBSERVED RESULT
404 error

EXPECTED RESULT
The correct link is https://www.bbc.co.uk/weather/2655459

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 41
KDE Plasma Version: 6.3.0
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.2
Comment 1 Bug Janitor Service 2025-02-15 17:51:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5209
Comment 2 Ismael Asensio 2025-02-18 00:53:33 UTC
Git commit 0096f8dc7fcfa5d1b3f1c0e27b529ed9c6f0528b by Ismael Asensio.
Committed on 18/02/2025 at 00:26.
Pushed by iasensio into branch 'master'.

weather/bbcukmet: Filter out regions from search results

The location search from bbcukmet also provides results that match
names of regions (at least within the UK). This can generate two
results with the same name for both, a town and its region.

Previously we would disambiguate those results with a number, but
this is not clear to users, so better filter out the region results.
FIXED-IN: 6.3.1

M  +6    -0    dataengines/weather/ions/bbcukmet/ion_bbcukmet.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/0096f8dc7fcfa5d1b3f1c0e27b529ed9c6f0528b
Comment 3 Ismael Asensio 2025-02-18 01:20:37 UTC
Git commit bb9c893ae576455e495be51a16dccbe53ee5b86c by Ismael Asensio.
Committed on 18/02/2025 at 00:56.
Pushed by iasensio into branch 'Plasma/6.3'.

weather/bbcukmet: Filter out regions from search results

The location search from bbcukmet also provides results that match
names of regions (at least within the UK). This can generate two
results with the same name for both, a town and its region.

Previously we would disambiguate those results with a number, but
this is not clear to users, so better filter out the region results.
FIXED-IN: 6.3.1


(cherry picked from commit 0096f8dc7fcfa5d1b3f1c0e27b529ed9c6f0528b)

Co-authored-by: Ismael Asensio <isma.af@gmail.com>

M  +6    -0    dataengines/weather/ions/bbcukmet/ion_bbcukmet.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/bb9c893ae576455e495be51a16dccbe53ee5b86c